docs/.vitepress/theme/custom.css
:root {
  --vp-c-brand-1: #ff7400;
  --vp-c-brand-2: #ff7400;
  --vp-c-brand-3: #ff7400;

  --vp-home-hero-name-color: transparent;
  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #ff4d00 30%, #ff9a00);

  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(255, 77, 0, .2) 40%, rgba(255, 154, 0, .2) 40%);
  --vp-home-hero-image-filter: blur(44px);
}

@media (min-width: 640px) {
  :root {
    --vp-home-hero-image-filter: blur(56px);
  }
}

@media (min-width: 960px) {
  :root {
    --vp-home-hero-image-filter: blur(68px);
  }
}

.hidden {
  display: none;
}

.iframe {
  width: 100%;
  border: none;
}

.VPHomeHero .VPImage {
  max-width: 160px;
}

.video {
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.package {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

.package h3 {
  display: flex;
  align-items: center;
  gap: 0.75rem;
  font-weight: bold;
  font-size: 1rem;
}

.package h3 img {
  width: 2rem;
}

.package p {
  margin-left: 1rem;
  padding-left: 1rem;
  border-left: 1px solid var(--vp-c-divider);
}

.schema {
  margin: 3rem auto;
}

.schema-stitcher {
  max-width: 400px;
}

.schema-dashboard {
  max-width: 300px;
}

.details.minimal {
  background-color: transparent;
  padding: 0;
}

